Try using message bundle as part of agent run